--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stravital",
+  "name": "fem-password-gen",
   "version": "0.1.0",
   "description": "A simple React starter template for your next react application.",
   "license": "MIT",
@@ -13,8 +13,9 @@
     "serve": "vite preview",
     "lint": "yarn eslint --config ./.eslintrc.cjs ./src/**/*.{tsx,ts}",
     "postinstall": "husky install",
-    "type-check": "tsc --project tsconfig.json --pretty --noEmit",
-    "format": "prettier --config ./.prettierrc.cjs -w ./src/**/*.{tsx,ts}"
+    "typef-check": "tsc --project tsconfig.json --pretty --noEmit",
+    "format": "prettier --config ./.prettierrc.cjs -w ./src/**/*.{tsx,ts}",
+    "test": "jest"
   },
   "dependencies": {
     "clsx": "^1.1.1",
@@ -23,13 +24,18 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "tailwind-merge": "^1.3.0"
+    "tailwind-merge": "^1.3.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+    "@types/jest": "^29.0.0",
     "@types/node": "^18.0.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/zxcvbn": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "@vitejs/plugin-react": "^1.3.0",
@@ -39,6 +45,7 @@
     "eslint": "^8.12.0",
     "eslint-plugin-react": "^7.29.4",
     "husky": "^7.0.4",
+    "jest": "^29.0.1",
     "lint-staged": "^12.3.1",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
