--- a/starter-code/.gitignore
+++ b/starter-code/.gitignore
@@ -11,30 +11,6 @@
 ###############################################
 *.xd
 
-.prettierignore
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-package-lock.json
-*.local
-*.lock
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.prettierignore
