--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve": "vite preview",
     "lint": "yarn eslint --config ./.eslintrc.cjs ./src/**/*.{tsx,ts}",
     "postinstall": "husky install",
-    "typef-check": "tsc --project tsconfig.json --pretty --noEmit",
+    "type-check": "tsc --project tsconfig.json --pretty --noEmit",
     "format": "prettier --config ./.prettierrc.cjs -w ./src/**/*.{tsx,ts}",
     "test": "jest"
   },
