--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.18.13",
     "clsx": "^1.1.1",
     "jotai": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "tailwind-merge": "^1.3.0",
