--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "declaration": true,
-    "types": ["jest", "node"],
+    "types": ["node"],
     "composite": true
   },
   "include": ["./src"],
